src/test/ui/half-open-range-patterns/half-open-range-pats-inclusive-dotdotdot-bad-syntax.stderr
error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:17:9
   |
LL |         ...X => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:18:9
   |
LL |         ...0 => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:19:9
   |
LL |         ...'a' => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:20:9
   |
LL |         ...0.0f32 => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:27:17
   |
LL |             let ...$e;
   |                 ^^^ help: use `..=` instead
...
LL |     mac!(0);
   |     ------- in this macro invocation
   |
   = note: this error originates in the macro `mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

